WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
220483
Keep newly created IDBObjectStores in deleted map when IDBTransaction is aborted
https://bugs.webkit.org/show_bug.cgi?id=220483
Summary
Keep newly created IDBObjectStores in deleted map when IDBTransaction is aborted
Sihui Liu
Reported
2021-01-08 14:33:52 PST
<
rdar://problem/71934293
>
Attachments
Patch
(13.96 KB, patch)
2021-01-08 15:10 PST
,
Sihui Liu
no flags
Details
Formatted Diff
Diff
Patch
(14.07 KB, patch)
2021-01-11 09:55 PST
,
Sihui Liu
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2021-01-08 14:51:15 PST
Comment hidden (obsolete)
<
rdar://problem/72945157
>
Sihui Liu
Comment 2
2021-01-08 15:10:11 PST
Created
attachment 417307
[details]
Patch
Sihui Liu
Comment 3
2021-01-11 09:55:01 PST
Created
attachment 417388
[details]
Patch
EWS
Comment 4
2021-01-11 14:00:17 PST
Committed
r271379
: <
https://trac.webkit.org/changeset/271379
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 417388
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug