LayoutTests/storage/indexeddb/modern/resources/abort-objectstore-info.js
@@ -8,12 +8,15 @@ function prepareDatabase()
     evalAndLog("objectStore1_1 = connection1.createObjectStore('objectStore1');");
     evalAndLog("objectStore1_2 = connection1.createObjectStore('objectStore2');");
     evalAndLog("objectStore1_2.createIndex('index', 'foo');");
+    evalAndLog("objectStore1_4 = connection1.createObjectStore('objectStore4');");
+    evalAndLog("objectStore1_4.createIndex('index', 'foo');");
 
     debug("");
     shouldBe("connection1.version", "1");
-    shouldBe("connection1.objectStoreNames.length", "2");
+    shouldBe("connection1.objectStoreNames.length", "3");
     shouldBe("objectStore1_1.indexNames.length", "0");
     shouldBe("objectStore1_2.indexNames.length", "1");
+    shouldBe("objectStore1_4.indexNames.length", "1");
     debug("");
 }
 
@@ -35,25 +38,33 @@ function secondUpgradeNeeded()
     evalAndLog("objectStore2_1 = secondRequest.transaction.objectStore('objectStore1');");
     evalAndLog("objectStore2_2 = secondRequest.transaction.objectStore('objectStore2');");
     evalAndLog("objectStore2_3 = connection2.createObjectStore('objectStore3');");
+    evalAndLog("objectStore2_4 = secondRequest.transaction.objectStore('objectStore4');");
 
     debug("");
     shouldBe("connection2.version", "2");
-    shouldBe("connection2.objectStoreNames.length", "3");
+    shouldBe("connection2.objectStoreNames.length", "4");
     shouldBe("objectStore2_1.indexNames.length", "0");
     shouldBe("objectStore2_2.indexNames.length", "1");
     shouldBe("objectStore2_3.indexNames.length", "0");
+    shouldBe("objectStore2_4.indexNames.length", "1");
     
     debug("");
     evalAndLog("objectStore2_1.createIndex('index', 'foo');");
     evalAndLog("objectStore2_2.deleteIndex('index');");
     evalAndLog("objectStore2_3.createIndex('index', 'foo');");
-    debug("");
+    evalAndLog("objectStore2_4.deleteIndex('index');");
+    evalAndLog("connection2.deleteObjectStore('objectStore4');");
+    evalAndLog("new_objectStore2_4 = connection2.createObjectStore('objectStore4');");
+    evalAndLog("new_objectStore2_4.createIndex('index1', 'foo');");
+    evalAndLog("new_objectStore2_4.createIndex('index2', 'bar');");
 
+    debug("");
     shouldBe("connection2.version", "2");
-    shouldBe("connection2.objectStoreNames.length", "3");
+    shouldBe("connection2.objectStoreNames.length", "4");
     shouldBe("objectStore2_1.indexNames.length", "1");
     shouldBe("objectStore2_2.indexNames.length", "0");
     shouldBe("objectStore2_3.indexNames.length", "1");
+    shouldBe("new_objectStore2_4.indexNames.length", "2");
 
     debug("");
     evalAndLog("secondRequest.transaction.abort();");
@@ -65,16 +76,19 @@ function checkState()
     debug("checkState():");
 
     shouldBe("connection1.version", "1");
-    shouldBe("connection1.objectStoreNames.length", "2");
+    shouldBe("connection1.objectStoreNames.length", "3");
     shouldBe("objectStore1_1.indexNames.length", "0");
     shouldBe("objectStore1_2.indexNames.length", "1");
+    shouldBe("objectStore1_4.indexNames.length", "1");
     debug("");
 
     shouldBe("connection2.version", "1");
-    shouldBe("connection2.objectStoreNames.length", "2");
+    shouldBe("connection2.objectStoreNames.length", "3");
     shouldBe("objectStore2_1.indexNames.length", "0");
     shouldBe("objectStore2_2.indexNames.length", "1");
     shouldBe("objectStore2_3.indexNames.length", "0");
+    shouldBe("objectStore2_4.indexNames.length", "1");
+    shouldBe("new_objectStore2_4.indexNames.length", "0");
 
     finishJSTest();
 }
